# gramogram

./: .gitignore  CMakeLists.txt  chat.cpp  chat.h  endpoints.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mmm.pro  sendmessage.cpp  sendmessage.h  signwindow.cpp  signwindow.h  signwindow.ui  starter.py
css/: signStyle.css  style.css
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
gramogram/: db.sqlite3  manage.py
gramogram/gramogram/: asgi.py  settings.py  urls.py  wsgi.py
gramogram/messangerAPI/: apps.py  models.py  urls.py  views.py
gramogram/messangerAPI/migrations/: 0001_initial.py
